include_directories("${CMAKE_CURRENT_SOURCE_DIR}")

add_executable(cpp_get_item_example cpp_get_item_example.cpp)
add_executable(cpp_set_item_example cpp_set_item_example.cpp)
add_executable(cpp_get_items_example cpp_get_items_example.cpp)
add_executable(cpp_get_items_iter_example cpp_get_items_iter_example.cpp)
add_executable(cpp_delete_item_example cpp_delete_item_example.cpp)
add_executable(cpp_application_example cpp_application_example.cpp)
add_executable(cpp_application_changes_example cpp_application_changes_example.cpp)
add_executable(cpp_rpc_example cpp_rpc_example.cpp)
add_executable(cpp_turing_rpc_example cpp_turing_rpc_example.cpp)

target_link_libraries(cpp_get_item_example Sysrepo-cpp)
target_link_libraries(cpp_set_item_example Sysrepo-cpp)
target_link_libraries(cpp_get_items_example Sysrepo-cpp)
target_link_libraries(cpp_get_items_iter_example Sysrepo-cpp)
target_link_libraries(cpp_delete_item_example Sysrepo-cpp)
target_link_libraries(cpp_application_example Sysrepo-cpp)
target_link_libraries(cpp_application_changes_example Sysrepo-cpp)
target_link_libraries(cpp_rpc_example Sysrepo-cpp)
target_link_libraries(cpp_turing_rpc_example Sysrepo-cpp)
